try to make sure barcodes aren't truncated

--- a/locator-form-frontend/src/components/layout/styles.css
+++ b/locator-form-frontend/src/components/layout/styles.css
@@ -1075,6 +1075,14 @@ label.checkbox {
 
 .print-no-break {page-break-inside: avoid;}
 
+.barcode {
+  display: block;
+  width: 100%;
+  page-break-before: auto;
+  page-break-after: auto; 
+  page-break-inside: avoid;
+}
+
 h1,
 h2,
 h3,
